--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publisher": "Roblox-TS",
 	"displayName": "roblox-ts",
 	"description": "A language service plugin that enhances the editing experience in roblox-ts.",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"icon": "icon.png",
 	"engines": {
 		"vscode": "^1.52.0"
@@ -88,6 +88,6 @@
 		"vscode-test": "^1.4.1"
 	},
 	"dependencies": {
-		"roblox-ts-extensions": "*"
+		"roblox-ts-extensions": "^1.1.2"
 	}
 }
