--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publisher": "Roblox-TS",
 	"displayName": "roblox-ts",
 	"description": "A language service plugin that enhances the editing experience in roblox-ts.",
-	"version": "0.0.8",
+	"version": "0.0.9",
 	"icon": "icon.png",
 	"engines": {
 		"vscode": "^1.52.0"
@@ -26,6 +26,20 @@
 				"enableForWorkspaceTypeScriptVersions": true
 			}
 		],
+		"commands": [
+			{
+				"command": "roblox-ts.openOutput",
+				"title": "roblox-ts: Open Output Path"
+			}
+		],
+		"menus": {
+			"commandPalette": [
+				{
+					"command": "roblox-ts.openOutput",
+					"when": "roblox-ts:inSrcDir"
+				}
+			]
+		},
 		"configuration": {
 			"title": "roblox-ts",
 			"properties": {
@@ -76,17 +90,17 @@
 	"devDependencies": {
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.0.4",
-		"@types/node": "^12.19.13",
+		"@types/node": "^12.20.1",
 		"@types/vscode": "^1.52.0",
 		"@typescript-eslint/eslint-plugin": "^4.13.0",
 		"@typescript-eslint/parser": "^4.13.0",
 		"eslint": "^7.15.0",
 		"glob": "^7.1.6",
 		"mocha": "^8.1.3",
-		"typescript": "^4.1.2",
 		"vscode-test": "^1.4.1"
 	},
 	"dependencies": {
+		"typescript": "^4.1.5",
 		"roblox-ts-extensions": "^1.1.8"
 	}
 }
