Add launch button

--- a/package.json
+++ b/package.json
@@ -31,6 +31,16 @@
 				"command": "roblox-ts.openOutput",
 				"title": "Open Output Path",
 				"category": "roblox-ts"
+			},
+			{
+				"command": "roblox-ts.start",
+				"title": "Start Compiler",
+				"category": "roblox-ts"
+			},
+			{
+				"command": "roblox-ts.stop",
+				"title": "Stop Compiler",
+				"category": "roblox-ts"
 			}
 		],
 		"menus": {
@@ -81,6 +91,14 @@
 						"type": "string"
 					},
 					"description": "The paths to be treated as server-sided directories. Overrides rojo if enabled."
+				},
+				"roblox-ts.command.parameters": {
+					"type": "array",
+					"default": ["-w"],
+					"items": {
+						"type": "string"
+					},
+					"description": "The parameters to be passed into the command triggered from the status bar."
 				}
 			}
 		}
