Add options for NPX, remove platform suffix

--- a/package.json
+++ b/package.json
@@ -99,6 +99,11 @@
 						"type": "string"
 					},
 					"description": "The parameters to be passed into the command triggered from the status bar."
+				},
+				"roblox-ts.command.useNpx": {
+					"type": "boolean",
+					"default": true,
+					"description": "Whether to use npx to spawn roblox-ts. This allows you to use local installations"
 				}
 			}
 		}
