Update status visibility setting group

--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
 					},
 					"description": "The paths to be treated as server-sided directories. Overrides rojo if enabled."
 				},
-				"roblox-ts.status.show": {
+				"roblox-ts.command.status.show": {
 					"type": "boolean",
 					"default": true,
 					"description": "Whether to show the status button."
