--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vscode-roblox-ts",
-	"publisher": "Roblox-TS",
+	"publisher": "roblox-ts",
 	"displayName": "roblox-ts",
 	"description": "A language service plugin that enhances the editing experience in roblox-ts.",
 	"version": "1.1.0",
