--- a/package.json
+++ b/package.json
@@ -120,15 +120,29 @@
 					"default": false,
 					"description": "If enabled, this will use rbxtsc-dev instead of rbxtsc."
 				},
-				"roblox-ts.color-picker.enabled": {
+				"roblox-ts.colorPicker.enabled": {
 					"type": "boolean",
 					"default": true,
 					"description": "If enabled, this will enable the color picker. (reload required)"
 				},
-				"roblox-ts.color-picker.precision": {
+				"roblox-ts.colorPicker.precision": {
 					"type": "number",
 					"default": 2,
 					"description": "The amount of digits to round to while using the color picker."
+				},
+				"roblox-ts.colorPicker.defaultOption": {
+					"type": "string",
+					"default": "fromRGB",
+					"enum": [
+						"fromRGB",
+						"fromHSV",
+						"new"
+					],
+					"enumDescriptions": [
+						"Use Color3.fromRGB() as the default in the color picker",
+						"Use Color3.fromHSV() as the default in the color picker",
+						"Use new Color3() as the default in the color picker"
+					]
 				},
 				"roblox-ts.openOutputToSide": {
 					"type": "boolean",
