--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	},
 	"main": "./out/extension.js",
 	"activationEvents": [
-		"workspaceContains:node_modules/@rbxts/compiler-types"
+		"workspaceContains:**/node_modules/@rbxts/compiler-types"
 	],
 	"contributes": {
 		"typescriptServerPlugins": [
@@ -193,6 +193,6 @@
 		"chroma-js": "^2.1.1",
 		"roblox-ts-extensions": "^1.7.2",
 		"tree-kill": "^1.2.2",
-		"typescript": "^4.3.2"
+		"typescript": "^5.4.5"
 	}
 }
