--- a/package.json
+++ b/package.json
@@ -121,6 +121,24 @@
 					"default": true,
 					"description": "Whether to show the status button."
 				},
+				"roblox-ts.command.npm.useNpmScripts": {
+					"type": "boolean",
+					"default": false,
+					"description": "Whether to use the npm scripts rather than rbxtsc, if they exist."
+				},
+				"roblox-ts.command.npm.watchScript": {
+					"type": "string",
+					"default": "watch",
+					"description": "The name of the npm watch script that roblox-ts should use."
+				},
+				"roblox-ts.command.npm.watchScriptArgs": {
+					"type": "array",
+					"default": ["--"],
+					"items": {
+						"type": "string"
+					},
+					"description": "Additional arguments passed to npm run. Arguments after the `--` will be passed directly to the npm script."
+				},
 				"roblox-ts.command.parameters": {
 					"type": "array",
 					"default": [
@@ -129,7 +147,7 @@
 					"items": {
 						"type": "string"
 					},
-					"description": "The parameters to be passed into the command triggered from the status bar."
+					"description": "The parameters to be passed into the command triggered from the status bar, except when using npm scripts."
 				},
 				"roblox-ts.command.development": {
 					"type": "boolean",
@@ -182,9 +200,9 @@
 		"@types/mocha": "^8.0.4",
 		"@types/node": "^12.20.1",
 		"@types/vscode": "^1.52.0",
-		"@typescript-eslint/eslint-plugin": "^4.13.0",
-		"@typescript-eslint/parser": "^4.13.0",
-		"eslint": "^7.15.0",
+		"@typescript-eslint/eslint-plugin": "^7.8.0",
+		"@typescript-eslint/parser": "^7.8.0",
+		"eslint": "^8.57.0",
 		"glob": "^7.1.6",
 		"mocha": "^8.1.3",
 		"vscode-test": "^1.4.1"
