--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publisher": "roblox-ts",
 	"displayName": "roblox-ts",
 	"description": "A language service plugin that enhances the editing experience in roblox-ts.",
-	"version": "1.7.0",
+	"version": "1.8.0",
 	"icon": "icon.png",
 	"engines": {
 		"vscode": "^1.52.0"
@@ -133,7 +133,9 @@
 				},
 				"roblox-ts.command.npm.watchScriptArgs": {
 					"type": "array",
-					"default": ["--"],
+					"default": [
+						"--"
+					],
 					"items": {
 						"type": "string"
 					},
