Support luau extension

--- a/package.json
+++ b/package.json
@@ -210,6 +210,7 @@
 		"vscode-test": "^1.4.1"
 	},
 	"dependencies": {
+		"@roblox-ts/path-translator": "^1.1.0",
 		"chroma-js": "^2.1.1",
 		"roblox-ts-extensions": "^1.7.2",
 		"tree-kill": "^1.2.2",
